Fix Swagger host for Heroku
