# app/echo-server/main.go
@@ -10,8 +10,9 @@
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host localhost:8080
+// @host go-game-rental-3beef3913ef8.herokuapp.com  // ← UBAH INI!
 // @BasePath /
+// @schemes https  // ← TAMBAH INI (Heroku pakai HTTPS)
 
 // @securityDefinitions.apikey BearerAuth
 // @in header
