# docs/swagger.json
@@ -1,4 +1,15 @@
 {
+    "schemes": [
+        "https",
+        "",
+        "//",
+        "←",
+        "TAMBAH",
+        "INI",
+        "(Heroku",
+        "pakai",
+        "HTTPS)"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "Video Game Rental API adalah sistem backend untuk platform penyewaan game fisik",
@@ -15,7 +26,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "go-game-rental-3beef3913ef8.herokuapp.com  // ← UBAH INI!",
     "basePath": "/",
     "paths": {
         "/admin/bookings": {
